@@ -15,7 +15,6 @@
  *                                                                         *
  ***************************************************************************/
 
- 
 #import "Models/Channel.h"
 #import "GNUstepOutput.h"
 
