@@ -1,3 +1,7 @@
+2005-06-08 Andrew Ruder <aeruder@ksu.edu>
+ * GNUstepOutput: Changed /scrollback lines to work with new scrollback
+ history mechanism.  Obsoleted several unused preferences. ;)
+
 2005-06-05 Andrew Ruder <aeruder@ksu.edu>
  * GNUstepOutput: Fixed history corruption when closing tab with /close.
  Fixed notifications when removing tabs so that new selection is sent out
